# ugga

./: .dockerignore  .env.example  .gitignore  .vercelignore  =7.0.0  CLAUDE.md  Dockerfile  TODO.md  docker-compose.yml  pyproject.toml  railway.toml  requirements-vercel.txt  requirements.txt  vercel.json
alembic/: env.py
alembic/versions/: 001_add_student_progress_tracking.py  002_add_profile_sharing.py  003_add_planned_sections.py  004_add_user_interests.py  005_add_social_seeding_fields.py  006_add_seat_alerts.py
api/: index.py  requirements.txt
data/: campus_buildings.json  campus_graph.jsonld  campus_mobility.json  programs_list.txt
frontend/: .env  .env.example  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css  main.tsx
scripts/: save_syllabi_to_db.py  scrape_academic_calendar.py  scrape_bulletin_courses.py  start.sh  stop.sh
src/: celery_app.py  cli.py  config.py
src/api/: alerts.py  auth.py  chat.py  cohorts.py  instructors.py  main.py  payments.py  profile.py  progress.py  rate_limit.py  schemas.py  social.py  study_groups.py  users.py
src/models/: campus_graph.py  course.py  database.py
src/parsers/: uga_pdf_parser.py
src/scanners/: __init__.py  schedule_scanner.py
src/scripts/: seed_social.py
src/services/: ai_chat_service.py  audit_service.py  bulletin_firecrawl.py  bulletin_scraper.py  course_linker.py  course_service.py  embedding_service.py  faculty_scraper.py  faculty_scraper_playwright.py  graduation_optimizer.py  monitor_service.py  possibilities_service.py  prerequisite_parser.py  (+5 more)
(+35 files in other folders)
